<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ivBanner"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="18dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btImageBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/transparent"
                android:contentDescription="@string/backButton"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/iB6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_marginTop="10dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/transparent"
                android:contentDescription="@string/Opsi"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_baseline_more_vert_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="16dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/tViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/tViewDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="Selamat siang adalah kata kata yang diucapkan orang jika bertemu temannya"
                android:textColor="#4E342E"
                android:textSize="14sp" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDetailPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ivBanner"
        tools:listitem="@layout/item_card"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:contentDescription="@string/Hello"
        app:backgroundTint="#000000"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_add" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="18dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.Material.ProgressBar.Large"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </FrameLayout>


</RelativeLayout>